# simple-sudoku

./: .gitignore  Makefile  grids.json  main.cpp  makefile  sudoku  sudoku.cpp  sudoku_grid.cpp  sudoku_grid.h
ncurses/: ._CMakeCache.txt  ._cmake_install.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ncurses_test  ncurses_test.cpp  prepare.sh
ncurses/ncurses-6.2/: Makefile  config.status  edit_man.sh  man_alias.sed
ncurses/ncurses-6.2/c++/: Makefile  demo
ncurses/ncurses-6.2/form/: Makefile
ncurses/ncurses-6.2/include/: Makefile  ncurses_cfg.h
ncurses/ncurses-6.2/install/share/terminfo/A/: abm85  abm85h  adm36  ampex210
ncurses/ncurses-6.2/install/share/terminfo/E/: exec80
ncurses/ncurses-6.2/install/share/terminfo/M/: mt4520-rv
ncurses/ncurses-6.2/man/: Makefile  ncurses6-config.1
ncurses/ncurses-6.2/menu/: Makefile
ncurses/ncurses-6.2/misc/: Makefile  run_tic.sed  run_tic.sh  terminfo.tmp
ncurses/ncurses-6.2/ncurses/: Makefile
ncurses/ncurses-6.2/panel/: Makefile
ncurses/ncurses-6.2/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
ncurses/ncurses-6.2/test/: Makefile  background  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  echochar  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  insdelln  inserts  keynames  knight  list_keys  (+29 more)
res/: how_to_play.txt  (+3 more)
(+145 files in other folders)
